--- a/public/formVue.html
+++ b/public/formVue.html
@@ -394,6 +394,7 @@
                 <ul>
                     <li><a href="#"><i class="fas fa-home"></i><span class="sidebar-text"> Dashboard</span></a></li>
                     <li><a href="#"><i class="fas fa-box"></i><span class="sidebar-text"> Produtos</span></a></li>
+                    <li><a href="#"><i class="fas fa-box"></i><span class="sidebar-text"> Vendas</span></a></li>
                     <li><a href="#"><i class="fas fa-users"></i><span class="sidebar-text"> Usuários</span></a></li>
                     <li><a href="#"><i class="fas fa-cog"></i><span class="sidebar-text"> Configurações</span></a></li>
                 </ul>
