[feature] edição de layout

--- a/public/produto.html
+++ b/public/produto.html
@@ -393,7 +393,7 @@
             <div class="sidebar" :class="{ 'hidden': !sidebarVisible, 'collapsed': sidebarCollapsed }">
                 <ul>
                     <li><a href="#"><i class="fas fa-home"></i><span class="sidebar-text"> Dashboard</span></a></li>
-                    <li><a href="#"><i class="fas fa-box"></i><span class="sidebar-text"> Produtos</span></a></li>
+                    <li><a href="produto.html"><i class="fas fa-box"></i><span class="sidebar-text"> Produtos</span></a></li>
                     <li><a href="cart.html"><i class="fas fa-box"></i><span class="sidebar-text"> Vendas</span></a></li>
                     <li><a href="#"><i class="fas fa-users"></i><span class="sidebar-text"> Usuários</span></a></li>
                     <li><a href="#"><i class="fas fa-cog"></i><span class="sidebar-text"> Configurações</span></a></li>
